@@ -51,6 +51,11 @@ Features
 - Symmetry handling constraints (cons_orbisack, cons_orbitope, cons_symresack) now have an additional parameter to encode
   whether they are model constraints, i.e., define the problem, or whether they are only present to handle symmetries.
 
+- Variables can now be marked as "relaxation-only". This flag should be used to introduce new variables that are required
+  to define a relaxation, but that are not part of any checked constraints. Essentially, these variables should only be used
+  in the current SCIP solve and disregarded after a restart or in SCIP copies. Hence, these variablesare not copied by SCIPcopy,
+  they are currently not used in conflict constraints, and cuts involving them are not upgraded to linear constraints.
+
 
 Performance improvements
 ------------------------
@@ -132,6 +137,9 @@ Interface changes
   as single (standalone) heuristic or within Adaptive Diving.
 - new parameters "divecontext" and "iterlim" to SCIPperformGenericDivingAlgorithm() to control in which context (single,adaptive) statistics are updated.
 
+- SCIPcopyVars, SCIPcopy, and SCIPcopyConsCompression do not copy variables that are marked as relaxation-only, thus it cannot be assumed anymore
+  that each active variable from the master SCIP also has a counterpart in the copy.
+
 ### New API functions
 
 - SCIPallowWeakDualReds() and SCIPallowStrongDualReds() replace the deprecated SCIPallowObjProp() and SCIPallowDualReds(), respectively
@@ -149,6 +157,7 @@ Interface changes
 - new API function SCIPgetLPDegeneracy() to get two measures for the degeneracy of the current LP
 - new API functions SCIPdivesetIsAvailable() to check preconditions of a dive set and SCIPdivesetIsPublic() to check if the dive set can be used
   by other primal heuristics.
+- new API functions SCIPvarIsRelaxationOnly() and SCIPvarSetRelaxationOnly() to query and set, resp., whether a variable is marked as relaxation-only
 
 ### Command line interface
 
